service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow
spec:
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 443           # Expose port 443 for HTTPS
      targetPort: 4499    # Your application listens on port 4499
  type: ClusterIP
